# cmake_test

./: .gitignore  CMakeLists.txt  main.cpp
basic/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
installing_testing/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  install_manifest.txt  libCollatzConfig.h  libCollatzConfig.h.in  main.cpp
lib/: CMakeLists.txt  main.cpp
lib/libpower/: CMakeLists.txt  libpower.hpp
optional_lib/: CMakeLists.txt  CMakeLists_old.txt  build.sh  libtimonconfig.h.in  main.cpp
optional_lib/libcollatz/: CMakeLists.txt  libcollatz.cpp  libcollatz.h
optional_lib/libtimon/: CMakeLists.txt  libtimon.h
usage_requirements_lib/libcollatz/: CMakeLists.txt
